--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-report": "vue-cli-service build --report"
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
     "aplayer": "^1.10.1",
     "axios": "^1.2.2",
     "bootstrap-vue": "^2.23.1",
+    "compression-webpack-plugin": "^10.0.0",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
     "echarts-wordcloud": "^2.1.0",
@@ -26,6 +28,7 @@
     "vue-router": "^3.6.5",
     "vue-typed-js": "^0.1.2",
     "vuex": "^3.6.2",
+    "webpack-bundle-analyzer": "^4.7.0",
     "zw-player": "^1.0.6"
   },
   "devDependencies": {
