--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
+    "@vssue/api-gitee-v5": "^1.4.7",
+    "@vssue/api-github-v3": "^1.4.7",
     "aplayer": "^1.10.1",
     "axios": "^1.2.2",
     "bootstrap-vue": "^2.23.1",
@@ -22,6 +24,7 @@
     "hls.js": "^1.2.9",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
+    "vssue": "^1.4.8",
     "vue": "^2.6.14",
     "vue-aplayer": "^1.6.1",
     "vue-element-loading": "^2.0.2",
